# dashcamwb

./: .gitignore  CLAUDE.md  README.md  pipeline.json  pyproject.toml
docs/adr/: 0001-consumer-camera-reference-color-matching.md
docs/superpowers/plans/: 2026-05-09-tesla-dashcam-wb.md  2026-05-11-serve-ui.md  2026-05-28-recentclips-low-motion-prune.md  2026-05-29-drive-highlight-day.md  2026-05-29-telemetry-gear-prune.md  2026-05-29-vlm-drive-highlight.md  2026-05-30-insta360-tesla-sync.md
docs/superpowers/specs/: 2026-05-09-tesla-dashcam-wb-design.md  2026-05-11-serve-ui-design.md  2026-05-28-recentclips-low-motion-prune-design.md  2026-05-29-drive-highlight-day-design.md  2026-05-29-telemetry-gear-prune-design.md  2026-05-29-vlm-drive-highlight-design.md  (+2 more)
profiles/: back.json  front.json  left_pillar.json  left_repeater.json  right_pillar.json  right_repeater.json
src/dcwb/: awb.py  calibrate.py  cli.py  daylight.py  ffmpeg_wrap.py  highlight.py  insta360.py  matrix.py  profile.py  prune.py  refmatch.py  render.py  sync.py  telemetry.py  verify.py  vlm.py
tests/: conftest.py  test_awb.py  test_calibrate.py  test_cli.py  test_daylight.py  test_ffmpeg_wrap.py  test_highlight.py  test_insta360.py  test_integration.py  test_matrix.py  test_profile.py  test_prune.py  test_refmatch.py  test_render.py  test_serve_app.py  test_serve_index.py  test_serve_preview.py  test_serve_render_jobs.py  test_serve_sync.py  test_sync.py  test_sync_render.py  test_telemetry.py  test_verify.py  test_vlm.py
tests/fixtures/: make_insta360.py  make_synthetic.py
(+12 files in other folders)
